cppcheck/raw_cppcheck/486837_report.txt
regcomp.c:17:1: error: Unmatched '{'. Configuration: ''. [syntaxError]
{
^
regcomp.c:17:1: error: Unmatched '{'. Configuration: 'DEBUGGING'. [syntaxError]
{
^
regcomp.c:17:1: error: Unmatched '{'. Configuration: 'DEBUGGING;NOJUMPTRIE'. [syntaxError]
{
^
regcomp.c:17:1: error: Unmatched '{'. Configuration: 'FULL_TRIE_STUDY;TRIE_STUDY_OPT'. [syntaxError]
{
^
regcomp.c:17:1: error: Unmatched '{'. Configuration: 'NOJUMPTRIE'. [syntaxError]
{
^
regcomp.c:17:1: error: Unmatched '{'. Configuration: 'PERL_ENABLE_POSITIVE_ASSERTION_STUDY'. [syntaxError]
{
^
regcomp.c:17:1: error: Unmatched '{'. Configuration: 'TRIE_STUDY_OPT'. [syntaxError]
{
^
nofile:0:0: information: Active checkers: There was critical errors (use --checkers-report=<filename> to see details) [checkersReport]

